--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-217.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-184.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.79MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.17MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇻🇳 越南-698.4KB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
   - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
